force-app/main/default/objects/BGBK__Payment_Method__mdt/fields/BGBK__Gateway_Host_Page_Url__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Gateway_Host_Page_Url__c</fullName>
    <description>Gateway form page url</description>
    <inlineHelpText>(Optional) Set this to the gateway form page url if the form needs to be on BG and not a redirect</inlineHelpText>
    <label>Gateway Host Page Url</label>
    <type>Url</type>
</CustomField>