force-app/main/default/objects/BGBK__Payment_Method__mdt/fields/BGBK__isGateway_Required__c.field-meta.xml
<CustomField>
    <fullName>BGBK__isGateway_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gateway Required</label>
    <type>Checkbox</type>
</CustomField>