force-app/main/default/objects/BGBK__Payment_Method__mdt/fields/BGBK__Lightning_Component__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Lightning_Component__c</fullName>
    <label>Lightning Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>