force-app/main/default/objects/BGBK__Payment_Method__mdt/fields/BGBK__Order__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>