force-app/main/default/objects/BGBK__Payment_Method__mdt/fields/BGBK__Payment_Icon__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Payment_Icon__c</fullName>
    <label>Payment Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>