force-app/main/default/objects/BGBK__Payment_Method__mdt/fields/BGBK__Receipt_Fields__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Receipt_Fields__c</fullName>
    <label>Receipt Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>